--- a/main.css
+++ b/main.css
@@ -105,3 +105,43 @@ nav{
 .toggle .linea3{
     transform: rotate(45deg) translate(-5px, -6px);
 }
+
+header{
+   background-image: url(FotosPins/inicio.jpeg);
+   height: 450px;
+   background-size: cover;
+   background-repeat: no-repeat;
+   font-family:'Montserrat', sans-serif;
+   background-position: center center;
+}
+
+.inicio{
+    text-align: center;
+    position: absolute;
+}
+
+.inicio p{
+    font-size: 60px;
+    font-weight: bold;
+    margin: 1.5em 0;
+    color: black;
+}
+
+.inicio a {
+    color: white;
+    text-decoration: none;
+    background: grey;
+    padding: 4px 20px;
+    border-radius: 30px;
+    font-size: 30px;
+    margin: 10px;
+}
+
+aside {
+    flex: 30px;
+    background-color: lavender;
+    padding: 20px;
+}
+
+
+/* 
