--- a/catalogo.css
+++ b/catalogo.css
@@ -14,12 +14,19 @@ h1{
 }
 p{
     margin: 10px;
+    text-align: center;
+}
+
+.grid-container{
+    display: grid;
+    grid-template-columns: auto auto auto;
+    justify-content: center;
 }
 
 section {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: space-evenly;
     width: 100%;
 }
 
@@ -92,4 +99,45 @@ section {
     color: black;
     background-color: transparent;
     border: 1px solid black;
+}
+
+.modal{
+display: none;
+background: rgba(0,0,0,0.4);
+width: 100vw;
+height: 100vh;
+top: 0;
+left: 0;
+position: fixed;
+padding: 20px;
+justify-content: center;
+align-items: center;
+z-index: 100;
+}
+
+.modal-container {
+background: white;
+max-width: 90%;
+min-width:300px;
+min-height: 200px;
+max-height: 90%;
+padding:20px;
+border-radius: 15px;
+position: relative;
+}
+
+.close-modal {
+background: red;
+width: 36px;
+height: 36px;
+display: flex;
+justify-content: center;
+align-items: center;
+color: white;
+font-size: 1.3rem;
+border-radius: 50%;
+position: absolute;
+right: -10px;
+top: -10px;
+cursor: pointer;
 }
